some new style updates and new images

--- a/index.html
+++ b/index.html
@@ -3,16 +3,30 @@
     <head>
         <meta charset="UTF-8">
         <link rel='stylesheet' href="styles.css">
-        <title>Welcome</title>
+        <title>Welcome!</title>
         <link rel='icon' href='Images/Iron_Cat_logo.png'>
         <style>
-
+			div.Welcome {
+                display: block;
+                margin: auto;
+				border-radius:20px 20px 20px 20px;
+				-moz-border-radius:20px 20px 20px 20px;
+				-webkit-border-radius:20px 20px 20px 20px;
+				background: #bfbfbf; 
+				height:40px;
+				width:250px;
+                text-align: center;
+			}
         </style>
         <script>
 
         </script>
     </head>
     <body>
-
+		<div class='Welcome'>
+            <h1><span style='color: red' class="shadow">Welcome</span></h1>
+		</div>
+        <img src="Images/Iron_Cat_logo.png" style="height: 200px; width: 200px; display: block; margin: auto" alt="IronCat Studios logo">
+        <img src="Images/Ironcat_logo_2.png" style="display: block; margin: auto" alt="IronCat Studios text">
     </body>
 </html>
