--- a/Discord_server.html
+++ b/Discord_server.html
@@ -5,6 +5,9 @@
         <title>Discord server</title>
         <link rel='stylesheet' href="styles.css">
         <link rel='icon' href='Images/Iron_Cat_logo.png'>
+        <style>
+            
+        </style>
     </head>
     <body>
 
