--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         </script>
     </head>
     <body>
+        <div class="Top_bar"></div>
 		<div class='Welcome'>
             <h1><span style='color: red' class="shadow">Welcome</span></h1>
 		</div>
-        <img src="Images/Iron_Cat_logo.png" style="height: 200px; width: 200px; display: block; margin: auto" alt="IronCat Studios logo">
-        <img src="Images/Ironcat_logo_2.png" style="display: block; margin: auto" alt="IronCat Studios text">
+        <img src="Images/Iron_Cat_logo.png" style="height: 150px; width: 150px; display: block; margin-left: auto; margin-right: auto; margin-top: 25px" alt="IronCat Studios logo">
+        <img src="Images/Ironcat_logo_2.png" style="display: block; margin-left: auto; margin-right: auto; margin-top: 25px" alt="IronCat Studios text">
     </body>
 </html>
