--- a/Contact_us.html
+++ b/Contact_us.html
@@ -7,6 +7,11 @@
         <link rel='icon' href='Images/Iron_Cat_logo.png'>
     </head>
     <body>
-
+        <div class="task_bar">
+            <a href="index.html">Home</a>
+            <a href="Games.html">Games</a>
+            <a href="Discord_server.html">Discord server</a>
+            <a class="task_bar_active" href="Contact_us.html">Contact us</a>
+        </div>
     </body>
 </html>
