--- a/Discord_server.html
+++ b/Discord_server.html
@@ -10,6 +10,11 @@
         </style>
     </head>
     <body>
-
+        <div class="task_bar">
+            <a href="index.html">Home</a>
+            <a href="Games.html">Games</a>
+            <a class="task_bar_active" href="Discord_server.html">Discord server</a>
+            <a href="Contact_us.html">Contact us</a>
+        </div>
     </body>
 </html>
