--- a/Games.html
+++ b/Games.html
@@ -13,6 +13,11 @@
         </script>
     </head>
     <body>
-
+        <div class="task_bar">
+            <a href="index.html">Home</a>
+            <a class="task_bar_active" href="Games.html">Games</a>
+            <a href="Discord_server.html">Discord server</a>
+            <a href="Contact_us.html">Contact us</a>
+        </div>
     </body>
 </html>
