--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         </script>
     </head>
     <body>
-        <div class="Top_bar"></div>
+        <div class="task_bar">
+            <a class="task_bar_active" href="index.html">Home</a>
+            <a href="Games.html">Games</a>
+            <a href="Discord_server.html">Discord server</a>
+            <a href="Contact_us.html">Contact us</a>
+        </div>
 		<div class='Welcome'>
             <h1><span style='color: red' class="shadow">Welcome</span></h1>
 		</div>
