--- a/Discord_server.html
+++ b/Discord_server.html
@@ -4,17 +4,25 @@
         <meta charset="UTF-8">
         <title>Discord server</title>
         <link rel='stylesheet' href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel='icon' href='Images/Iron_Cat_logo.png'>
         <style>
 
         </style>
     </head>
     <body>
-        <div class="task_bar">
-            <a href="index.html">Home</a>
-            <a href="Games.html">Games</a>
-            <a class="task_bar_active" href="Discord_server.html">Discord server</a>
-            <a href="Contact_us.html">Contact us</a>
+        <div class='top_bar_mobile'>
+            <div class='dropdown'>
+                <button class='dropbtn'>Menu
+                    <i class='fa fa-caret-down'></i>
+                </button>
+                <div class="dropdown-content  task_bar">
+                    <a href="index.html">Home</a>
+                    <a href="Games.html">Games</a>
+                    <a class="task_bar_active task_bar_active_mobile" href="Discord_server.html">Discord server</a>
+                    <a href="Contact_us.html">Contact us</a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
